# ITMO-cyberculture-2021-2022

./: .gitignore  Doxyfile  LICENSE  README.md  code-snippets.txt  console_calculator.py  unittesting_console_calculator.py
.github/workflows/: main.yml  python-testing.yml  superlinter.yml
GoogleTest/C_LAB2/: CMakeLists.txt  lab2.txt  main.cpp
GoogleTest/C_LAB2/Tests/: ClassName.h  test.cpp
html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  classunittesting__console__calculator_1_1_testing-members.html  classunittesting__console__calculator_1_1_testing.html  classunittesting__console__calculator_1_1_testing.js  console__calculator_8py.html  console__calculator_8py.js  files.html  files_dup.js  functions.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  md__r_e_a_d_m_e.html  namespaceconsole__calculator.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  namespaceunittesting__console__calculator.html  namespaceunittesting__console__calculator.js  navtreedata.js  navtreeindex0.js  pages.html  unittesting__console__calculator_8py.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  classes_0.js  files_0.js  files_2.js  functions_1.js  namespaces_0.js  namespaces_1.js  searchdata.js
